# todoBe

./: .env  .gitignore  Makefile  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0f530bd8eaa6_auto_migration.py  1fd723ec557a_auto_migration.py  5fbc0d4fd99d_auto_migration.py  8006d73c4f57_auto_migration.py  89c4f7932458_auto_migration.py  91bd70e53b2b_auto_migration.py  deb322ae6473_auto_migration.py  fbfa415d9abf_auto_migration.py
src/: config.py  database.py  global_metadata.py  main.py
src/auth/: decorators.py  models.py  router.py  services.py  shemas.py
src/tasks/: models.py  router.py  schemas.py
src/users/: models.py  router.py  schemas.py  services.py
