[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["Danya"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
alembic = "^1.13.3"
asyncpg = "^0.30.0"
passlib = "^1.7.4"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.36"
uvicorn = "^0.32.0"
psycopg2 = "^2.9.10"
pydentic = "^0.0.1.dev3"
jinja2 = "^3.1.4"
aiofiles = "^24.1.0"
starlette = "^0.41.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
pyjwt = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
